# cryptoscore-solana

./: .env.devnet  .env.example  .env.localnet  .env.mainnet-beta  .env.testnet  .gitignore  Anchor.toml  DEBUGGING_PORTFOLIO_SUMMARY.md  METRICSBAR_COMPLETE_FIX.md  METRICSBAR_DEBUG_GUIDE.md  METRICSBAR_FIX.md  METRICSBAR_FIX_SUMMARY.md  PORTFOLIO_FIX_FINAL.md  PORTFOLIO_SUMMARY_FIX.md  PREDICTION_MISMATCH_FIX.md  QUICK_CHECK.md  README.md  USER_MARKETS_FIX.md  package-lock.json  package.json  validate-tests.js
.kiro/steering/: product.md  structure.md  tech.md
app/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  test-fee-calculation.js  test-market-decode.js  test-market-fetch.js  verify-discriminators.js  vite.config.ts  vitest.config.ts
app/.gemini/: GEMINI.md
app/abi/: CryptoScoreDashboard.json  CryptoScoreFactory.json  CryptoScoreMarket.json
app/docs/: BUILD_FIX_SUMMARY.md  BUNDLE_SIZE_REPORT.md  CHANGELOG.md  CHANGELOG_THEMES.md  CLEANUP_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  FEE_ESTIMATION_GUIDE.md  FEE_ESTIMATION_QUICK_REFERENCE.md  FRONTEND_INTEGRATION_COMPLETE.md  HOOKS_REFERENCE.md  IMPLEMENTATION_PLAN.md  README.md  (+32 more)
deployments/: devnet-latest.json
programs/factory/: Cargo.toml  README.md
programs/factory/src/: lib.rs
programs/market/: Cargo.toml
programs/market/src/: lib.rs
scripts/: build-verify.ts  configure-network.ts  copy-idls.js  deploy.ts  export-idls.ts  verify-idls.sh
solana/: .env.devnet  .env.example  .env.localnet  .env.mainnet-beta  .solana-test-validator.json
tests/: cryptoscore.ts
(+202 files in other folders)
