[package]
name = "cryptoscore-market"
version = "0.1.0"
description = "CryptoScore Market Program - Individual prediction market logic"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cryptoscore_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"